# gym-drake-lca

./: .gitignore  LICENSE  README.md  conv_stl_to_obj.py  example.py  pyproject.toml  setup.py
examples/: example.py  keyboard_teleop_env.py
gym_drake_lca/: __init__.py  keyboard_teleop_env.py  lca_passive_simulation.py  low-cost-arm.urdf  test_env.py
gym_drake_lca/assets/: blue_cube.sdf  collision_ground_plane.sdf  cube.sdf  follower_arm.sdf  green_cube.sdf  low-cost-arm.urdf  red_cube.sdf  target.sdf
gym_drake_lca/envs/: __init__.py  drake_lca_env.py  lift_cube_env.py  pick_place_cube_env.py  reach_cube_env.py  stack_two_cubes_env.py  test_lift_cube_env.py
tests/: lca_passive_simulation.py  test_lift_cube_env.py
tools/: conv_stl_to_obj.py
