[tool.poetry]
name = "gym-drake-lca"
version = "0.0.5"
description = "A Gym implementation of the Low Cost Arm (LCA) in the Drake simulator."
authors = [
    "Samuel Zapolsky <samzapo@gmail.com>",
]
repository = "https://github.com/samzapo/gym-drake-lca"
readme = "README.md"
license = "Apache-2.0"
classifiers=[
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",

    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",

    "License :: OSI Approved :: Apache Software License",

    "Programming Language :: Python :: 3.10",
]
packages = [{include = "gym_drake_lca"}]


[tool.poetry.dependencies]
python = "^3.10"
drake = "^1.32.0"
gymnasium = ">=0.29.1"
matplotlib = ">=3.9.2"
numpy = ">=1.26.4"
pynput = ">=1.7.7"
imageio = {extras = ["ffmpeg"], version = ">=2.34.0"}
pre-commit = {version = ">=3.7.0", optional = true}
debugpy = {version = ">=1.8.1", optional = true}
pytest = {version = ">=8.1.0", optional = true}
pytest-cov = {version = ">=5.0.0", optional = true}

[tool.poetry.extras]
dev = ["pre-commit", "debugpy"]
test = ["pytest", "pytest-cov"]

[tool.ruff]
line-length = 110
target-version = "py310"
exclude = [
    "example.py",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "N", "B", "C4", "SIM"]
ignore-init-module-imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
